@startuml

title __PROSJEKT-JAVA's Class Diagram__\n

  namespace  {
    class Course {
    }
  }
  

  namespace  {
    class CreatePost {
    }
  }
  

  namespace  {
    class DBConnect {
    }
  }
  

  namespace  {
    class Folder {
    }
  }
  

  namespace  {
    class GetStatistics {
    }
  }
  

  namespace  {
    class Login {
    }
  }
  

  namespace  {
    class MainController {
    }
  }
  

  namespace  {
    class Post {
    }
  }
  

  namespace  {
    class Register {
    }
  }
  

  namespace  {
    class Reply {
    }
  }
  

  namespace  {
    class ReplyPost {
    }
  }
  

  namespace  {
    class Thread {
    }
  }
  

  namespace  {
    class User {
    }
  }
  

  namespace  {
    class View {
    }
  }
  

  CreatePost -up-|> DBConnect
  CreatePost o-- View : view
  GetStatistics -up-|> DBConnect
  Login -up-|> DBConnect
  MainController o-- Course : course
  MainController o-- CreatePost : createPost
  MainController o-- Login : login
  MainController o-- Register : register
  MainController o-- ReplyPost : replyPost
  MainController o-- GetStatistics : stats
  MainController o-- User : user
  MainController o-- View : view
  Register -up-|> DBConnect
  Register o-- Login : login
  Register o-- View : view
  ReplyPost -up-|> DBConnect
  ReplyPost o-- View : view
  View -up-|> DBConnect


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
